--- a/AgendaFornecedores/AgendaFornecedores/AgendaFornecedores.csproj
+++ b/AgendaFornecedores/AgendaFornecedores/AgendaFornecedores.csproj
@@ -28,6 +28,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
+    <PackageReference Include="MySql.Data" Version="8.1.0" />
+    <PackageReference Include="Novell.Directory.Ldap.NETStandard" Version="3.6.0" />
+    <PackageReference Include="System.DirectoryServices.AccountManagement" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
