--- a/AgendaFornecedores/AgendaFornecedores/AgendaFornecedores.csproj
+++ b/AgendaFornecedores/AgendaFornecedores/AgendaFornecedores.csproj
@@ -28,6 +28,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
+    <PackageReference Include="Novell.Directory.Ldap.NETStandard" Version="3.6.0" />
+    <PackageReference Include="System.DirectoryServices" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
