--- a/AgendaFornecedores/AgendaFornecedores/AgendaFornecedores.csproj
+++ b/AgendaFornecedores/AgendaFornecedores/AgendaFornecedores.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="MySql.Data" Version="8.1.0" />
     <PackageReference Include="MySqlConnector" Version="2.2.7" />
     <PackageReference Include="Novell.Directory.Ldap.NETStandard" Version="3.6.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="System.DirectoryServices" Version="7.0.1" />
   </ItemGroup>
 
