--- a/AgendaFornecedores/AgendaFornecedores/AgendaFornecedores.csproj
+++ b/AgendaFornecedores/AgendaFornecedores/AgendaFornecedores.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="jQuery" Version="3.7.1" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.57.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
     <PackageReference Include="MySql.Data" Version="8.1.0" />
